# palace-museum-video-demo

./: .gitignore
code/: README.md  docker-compose.yml
code/nginx/: nginx.conf
code/server/: .env.example  Dockerfile  pyproject.toml
code/server/app/: config.py  main.py
code/server/app/adapters/: base.py  custom.py  kling.py  registry.py  seedance.py  wan.py
code/server/app/api/: __init__.py  deps.py
code/server/app/api/v1/: auth.py  generation.py  history.py  media.py  models.py  router.py  settings.py  tags.py
code/server/app/core/: exceptions.py  security.py  storage.py
code/server/app/db/: session.py
code/server/app/db/migrations/: 001_init.sql  002_seed_data.sql
code/server/app/models/: __init__.py  base.py  generation_group.py  generation_task.py  image_asset.py  model_config.py  style_tag.py  user.py  user_preference.py
code/server/app/schemas/: auth.py  common.py  generation.py  model_config.py  tag.py
code/server/app/services/: auth.py  generation.py
code/web-ui/: index.html  package.json  tailwind.config.js  tsconfig.json
code/web-ui/src/api/: client.ts
code/web-ui/src/app/: main.ts  style.css
code/web-ui/src/components/layout/: AppLayout.vue
code/web-ui/src/pages/: HistoryDetailPage.vue  HistoryPage.vue  HomePage.vue  LoginPage.vue  ModelManagePage.vue  SettingsPage.vue  TagManagePage.vue
code/web-ui/src/router/: index.ts
code/web-ui/src/stores/: auth.ts  generation.ts
code/web-ui/src/types/: models.ts
