[tool]
pyproject_toml = """
[project]
name = "palace-museum-video-platform"
version = "1.0.0"
description = "故宫日历·图生视频管理平台"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.200",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.12",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis[hiredis]>=5.0",
    "arq>=0.26",
    "aioboto3>=12.0",
    "httpx>=0.27",
    "ofetch-py>=0.1",
    "structlog>=24.0",
    "email-validator>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]
"""

requirements_txt = """# Core
fastapi>=0.115,<0.200
uvicorn[standard]>=0.30
pydantic>=2.8
pydantic-settings>=2.4
python-jose[cryptography]>=3.3
passlib[bcrypt]>=1.7
python-multipart>=0.0.12

# Database
sqlalchemy[asyncio]>=2.0
asyncpg>=0.29
alembic>=1.13

# Cache & Queue
redis[hiredis]>=5.0
arq>=0.26

# Storage
aioboto3>=12.0

# HTTP
httpx>=0.27

# Logging
structlog>=24.0

# Validation
email-validator>=2.1
"""
